--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,20 @@
 {
-  "short_name": "EmojiCrush",
   "name": "EmojiCrush",
   "icons": [
     {
-      "src": "/images/icons-192.png",
+      "src": "./images/icons-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/images/icons-512.png",
+      "src": "./images/icons-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "id": "/?source=pwa",
-  "start_url": "/?source=pwa",
+  "start_url": "./?source=pwa",
   "background_color": "#333333",
   "display": "standalone",
-  "scope": "/",
   "theme_color": "#333333",
   "description": "Crush emojis by matching sets"
 }
